# oil-qa-c

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.cargo/: config.toml
apps/electron/: README.md  package.json  tsconfig.json
apps/electron/main/: index.ts
apps/electron/preload/: index.ts
apps/miniprogram/: README.md  app.js  app.json  app.wxss  package.json  project.config.json
apps/miniprogram/scripts/: check-files.mjs
apps/miniprogram/sdk/: miniprogramSdk.js  sdkStorage.js  sdkTransport.js
apps/miniprogram/services/: authApi.js  favoriteApi.js  feedbackApi.js  qaApi.js  request.js  sessionApi.js  streamApi.js
apps/miniprogram/stores/: authStore.js  chatStore.js  evidenceStore.js  favoriteStore.js
apps/miniprogram/utils/: config.js  format.js  tokenStorage.js
apps/mobile/: App.tsx  README.md  app.json  package.json  react-native.config.js  tsconfig.json
apps/mobile/android/: build.gradle  gradle.properties  settings.gradle
apps/web/: README.md  index.html  package.json  vite.config.ts
apps/web/src/: main.tsx
openspec/changes/add-react-native-client/: design.md  proposal.md  tasks.md
rust-sdk/: Cargo.toml  README.md
rust-sdk/bindings/mobile/: Cargo.toml
rust-sdk/bindings/mobile/include/: OilQaMobile.h
rust-sdk/bindings/mobile/src/: lib.rs
rust-sdk/bindings/mobile/uniffi/: oil_qa_mobile.udl
rust-sdk/bindings/wasm/: Cargo.toml
rust-sdk/bindings/wasm/src/: lib.rs
rust-sdk/crates/auth/: Cargo.toml
scripts/: build-mobile-android.sh  build-mobile-ios.sh  build-wasm.sh
(+97 files in other folders)
