[package]
name = "oil-qa-mobile"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
oil-qa-core = { path = "../../crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
