[package]
name = "oil-qa-wasm"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oil-qa-core = { path = "../../crates/core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
