[package]
name = "oil-qa-wasm"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oil-qa-core = { path = "../../crates/core" }
oil-qa-auth = { path = "../../crates/auth" }
oil-qa-platform = { path = "../../crates/platform" }
oil-qa-qa = { path = "../../crates/qa" }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
